fixed tourism category alignment problem

--- a/src/sections/tourism/Tourism.scss
+++ b/src/sections/tourism/Tourism.scss
@@ -63,6 +63,7 @@
   margin-top: -200px;
   transition: all 1s;
   height: 150px;
+  width: 100%;
 }
 
 .animate-list {
@@ -92,7 +93,7 @@
 }
 
 .link-item {
-  margin-left: 30px;
+  margin-left: 1.5vw;
 }
 
 @media screen and (max-width: 1024px) {
